<resources>
    <string name="app_name">GeekHub Home Tasks</string>
    <string name="btn_first_ht">First home task</string>
    <string name="btn_second_ht">Second home task</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="geekhub_label">Geek Hub Home tasks</string>
    <string name="home_tasks_label">Home tasks</string>

    <string name="main_label">Main</string>

    <!--first home task-->
    <string name="first_ht_label">First Home Task</string>
    <string name="input_text">Please, input some text...</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="btn_set_first_fragment">Set first fragment</string>
    <string name="btn_set_second_fragment">Set second fragment</string>
    <string name="set_text_btn">Set text to activity</string>

    <!--second home task-->
    <string name="second_ht_label">Second Home Task</string>
    <string name="btn_fibonacci">Fibonacci</string>
    <string name="btn_factorial">Factorial</string>
    <string name="input_factorial">Please, input number</string>
    <string name="btn_calculate">Calculate</string>

    <!--third home task-->
    <string name="third_ht_label">Third Home Task</string>

    <!--fourth home task-->
    <string name="fourth_ht_label">Fourth Home Task</string>
    <string name="my_fragment_text">My fragment</string>
    <string name="show_next">Show next</string>
    <string name="show_previous">Show previous</string>
    <string name="text_next">Next</string>
    <string name="text_previous">Previous</string>

    <!--fifth home task-->
    <string name="fifth_ht_label">Fifth Home Task</string>
    <string name="list_view">List view</string>
    <string name="animations">Animations</string>
    <string name="animation_text">My animation text</string>
    <string name="click_whitespace">Click me</string>
    <string name="fade_anim_text">Fade in animation</string>
    <string name="scale_anim_text">Scale animation</string>
    <string name="zoom_anim_text">Zoom animation</string>
    <string name="slide_anim_text">Slide up animation</string>

    <!--six home task-->
    <string name="six_ht_label">Sixth Home Task</string>
    <string name="label_description">Lorem ipsum dolor sit amet,
        consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
        Aenean massa. Cum sociis natoque penatibus et magnis dis parturient
        montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
        pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
        Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
        In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
        Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
        Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate
        eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
        eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis,
        feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.
        Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue.
        Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
        Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper
        libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc,
        blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec
        odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis
        faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus
        tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales
        sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</string>
    <string name="label_empty_list">List is empty ;(</string>

</resources>
