<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/my_frag_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_fragment_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_main_size" />

    <Button
        android:id="@+id/btn_show_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/show_next"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_show_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/show_previous"
        android:textColor="@android:color/black" />

</LinearLayout>